# windows-activator

./: pyproject.toml
