[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-activator"
authors = [{ name = "Windows Activation Team", email = "contact@example.com" }]
maintainers = [
    { name = "Windows Activation Team", email = "contact@example.com" }
]
description = "A Python tool for Windows activation utilities"
readme = "README.md"
requires-python = ">=3.6"
keywords = [
    "windows",
    "activation",
    "license",
    "product-key",
    "system-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black~=24.4.0",
    "build~=1.2.1",
    "flake8-comprehensions~=3.14.0",
    "flake8~=7.0.0",
    "pre-commit~=3.5.0",
    "pytest-cov~=5.0.0",
    "pytest~=8.1.1",
    "python-dateutil~=2.9.0",
    "twine~=5.0.0"
]
docs = [
    "Sphinx==7.3.7",
    "sphinx-argparse==0.4.0",
    "sphinx-autodoc-typehints==2.1.0",
    "sphinx-rtd-theme==2.0.0"
]

[project.scripts]
windows-activator = "windows_activator.cli:main"

[project.urls]
Homepage = "https://github.com/stefan-novachki/windows-activator"
Repository = "https://github.com/stefan-novachki/windows-activator"
Issues = "https://github.com/stefan-novachki/windows-activator/issues"

[tool.setuptools.dynamic]
version = { attr = "windows_activator.__version__" }

[tool.coverage.run]
source = ["windows_activator"]
branch = true

[tool.pytest]
testpaths = ["tests"]
markers = { windows = "windows activation tests" }
